nav spacing fixed

--- a/client/src/components/main-view/main-view.scss
+++ b/client/src/components/main-view/main-view.scss
@@ -22,7 +22,7 @@ body {
 
 .search-form{
   position: absolute;
-  right: 4.2em;
+  right: 7em;
 }
 
 .search{
@@ -31,6 +31,11 @@ body {
 
 .container{
   padding-top: 3em;
+}
+
+.userProfile{
+  margin: 2em 2em 2em 1em ;
+  color: white;
 }
 
 
